--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Dziennik Elektroniczny - {% block title %}{% endblock %}</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
 </head>
 <body>
     {% block content %}
     {% endblock %}
+    <div id="screenPage">
+
+    </div>
 
 
 </body>
