--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -5,7 +5,7 @@
     <title>Dziennik Elektroniczny - {% block title %}{% endblock %}</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='stylesheets/main.css')}}">
 </head>
 <body>
     {% block content %}
