--- a/frontend/static/stylesheets/main.css
+++ b/frontend/static/stylesheets/main.css
@@ -2,4 +2,30 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow-wrap: break-word;
+}
+
+#screenPage{
+    display: grid;
+    grid-template-columns: 30vw 40vw 30vw;
+    max-width: 100vw;
+    min-height: 100vh;
+
+    background: black;
+
+}
+
+#sectionLeft{
+    max-width: 30vw;
+    background: blue;
+}
+
+#sectionMiddle{
+    max-width: 40vw;
+    background: red;
+}
+
+#sectionRight{
+    max-width: 30vw;
+    background: yellow;
 }
