--- a/frontend/templates/loginPage.html
+++ b/frontend/templates/loginPage.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% block title%}Logowanie{% endblock %}
 
-{% block content %}
+{% block head %}
+<link rel="stylesheet" href="{{url_for('static', filename='stylesheets/loginPage.css')}}">
+{% endblock %}}
+
+{% block middle %}
 <h3>Dziennik Elektroniczny</h3>
 <form action="#" method="post">
-    <p>
+    <p class="inputs">
         <input type="text" name="email">
         <input type="text" name="password">
 
     </p>
-    <p>
+    <p class="button">
         <input type="submit" value="Zaloguj">
     </p>
 </form>
