--- a/frontend/templates/loginPage.html
+++ b/frontend/templates/loginPage.html
@@ -6,15 +6,19 @@
 {% endblock %}}
 
 {% block middle %}
-<h3>Dziennik Elektroniczny</h3>
-<form action="#" method="post">
-    <p class="inputs">
-        <input type="text" name="email">
-        <input type="text" name="password">
+<div class="container1">
+    <div class="mainName">Dziennik Elektroniczny</div>
 
-    </p>
-    <p class="button">
-        <input type="submit" value="Zaloguj">
-    </p>
-</form>
+    <form action="#" method="post">
+        <div class="inputs">
+            <input type="text" name="email">
+            <input type="text" name="password">
+
+        </div>
+        <div class="button">
+            <input type="submit" value="Zaloguj">
+        </div>
+    </form>
+</div>
+
 {% endblock %}
