--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id="screenPage">
+    <div id="screenPage" style="background: {{url_for('static', filename='images/botanical-cactus-close-up-decor-305821.jpg')}}">
         <div id="sectionLeft">
             {% block left %}
             {% endblock %}
