--- a/frontend/templates/loginPage.html
+++ b/frontend/templates/loginPage.html
@@ -11,8 +11,8 @@
 
     <form action="#" method="post">
         <div class="inputs">
-            <input type="text" name="email">
-            <input type="text" name="password">
+            <input type="text" name="email" placeholder="E-mail">
+            <input type="text" name="password" placeholder="Hasło">
 
         </div>
         <div class="button">
