--- a/frontend/static/stylesheets/loginPage.css
+++ b/frontend/static/stylesheets/loginPage.css
@@ -1,3 +1,7 @@
+#screenPage{
+    background-image: url(/static/images/botanical-cactus-close-up-decor-305821.jpg);
+}
+
 .mainName{
     font-size: 60px;
     font-weight: lighter;
@@ -20,19 +24,20 @@ form > .inputs{
     margin-left: auto;
     margin-right: auto;
 
-    width: 50vw;
+    width: 40vw;
     display: flex;
     justify-content: space-between;
 }
 
 form > .inputs > input{
-    width: 20.5vw;
+    width: 17.5vw;
     border: none;
-    padding: 0.5vh 2vw;
+    padding: 0.5vh 1vw;
+    border-radius: 0.25vw;
 }
 
 form > .button{
-    width: 50vw;
+    width: 40vw;
     margin-top: 1vw;
 
     margin-left: auto;
@@ -41,6 +46,7 @@ form > .button{
 
 form > .button > input{
     width: 100%;
+    height: 6vh;
     border: none;
     border-radius: 2.5vh;
     padding: 0.5vh 2vw;
