Added sessions to the websites. Main page no longer contains data in the url bar. Added "logout" page, that deletes session data and redirects to login page. Added "dataProblem" page, that is shown whenever there is a problem with session data.

--- a/frontend/templates/boardPage.html
+++ b/frontend/templates/boardPage.html
@@ -1,11 +1,16 @@
 {% extends "loggedInBase.html" %}
-{% block title%} - Tablica{% endblock %}
+{% block title%}Tablica{% endblock %}
 {% block innerHead %}
 
 {% endblock %}
 
 
 {% block middle %}
-Tablica powiadomień
+<div style="text-align: center">
+    Tablica powiadomień
+</div>
+
+
+
 {% endblock %}
 
