Started creating .json files for holding together section info (like what icon to use, what text).
Added 2 new icons.

--- a/frontend/templates/loggedInBase.html
+++ b/frontend/templates/loggedInBase.html
@@ -14,5 +14,13 @@
         <div class="yourEmailAdress">{{ session["email"] }}</div>
         <div class="yourPosition">{{ session["rola"].capitalize() }}</div>
     </div>
+
+    <div class="section">
+        <img class="icon">
+        <div class="title"></div>
+    </div>
+
+
+
 </div>
 {% endblock %}
