Przy logowaniu, po odczytaniu roli użytkownika parser odczytuje odpowiedni plik .json, w którym zapisane są uprawnienia do sekcji danej roli.

--- a/frontend/templates/loggedInBase.html
+++ b/frontend/templates/loggedInBase.html
@@ -15,9 +15,12 @@
         <div class="yourPosition">{{ session["rola"].capitalize() }}</div>
     </div>
 
+
     <div class="section">
         <img class="icon">
-        <div class="title"></div>
+        <div class="title">
+            {{ session["sections"] }}
+        </div>
     </div>
 
 
