--- a/frontend/templates/loginPage.html
+++ b/frontend/templates/loginPage.html
@@ -12,7 +12,7 @@
     <form action="#" method="post">
         <div class="inputs">
             <input type="text" name="email" placeholder="E-mail">
-            <input type="text" name="password" placeholder="Hasło">
+            <input type="password" name="password" placeholder="Hasło">
 
         </div>
         <div class="button">
