"LoggedInPage" teraz ładuje sekcje z plików .json, przez co dodawanie nowych sekcji / ról jest ułatwione.

--- a/frontend/templates/loggedInBase.html
+++ b/frontend/templates/loggedInBase.html
@@ -18,7 +18,7 @@
     {% for x in session["sections"] %}
 
         <div class="section">
-            <img class="icon" src="{{ url_for('static', filename=x["icon"][0]) }}">
+            <img class="icon" src="{{ url_for('static', filename=x["icon"]) }}">
             <div class="title">
                 {{ x["displayName"] }}
             </div>
