--- a/frontend/static/stylesheets/loggedIn.css
+++ b/frontend/static/stylesheets/loggedIn.css
@@ -26,3 +26,28 @@
     font-size: 1vw;
 }
 
+.section{
+    width: 100%;
+    background: rgba(0,0,0,0.1);
+    margin: 0.5vh 0;
+    display: flex;
+    justify-content: space-evenly;
+
+    border-top: 2px solid rgba(0,0,0,0.05);
+    border-bottom: 2px solid rgba(0,0,0,0.05);
+}
+
+
+.section > .title{
+    margin: auto 0;
+    font-size: 2.5vh;
+}
+
+.section > .icon{
+    width: 20%;
+    max-width: 8vh;
+}
+
+.section:hover{
+    background: rgba(30,144,255,0.2)
+}
