Dodanie oddzielnego css dla tego template'a.

--- a/frontend/templates/tworzUzytkownika.html
+++ b/frontend/templates/tworzUzytkownika.html
@@ -1,9 +1,9 @@
 {% extends "loggedInBase.html" %}
-{% block title%}Tablica admina{% endblock %}
-
-{% block head %}
-<link rel="stylesheet" href="{{url_for('static', filename='stylesheets/loggedIn.css')}}">
+{% block title%}Dodaj użytkowników{% endblock %}
+{% block innerHead %}
+    <link rel="stylesheet" href="{{url_for('static', filename='stylesheets/addUsersPage.css')}}">
 {% endblock %}
+
 
 {% block middle %}
 
