--- a/frontend/templates/loggedInBase.html
+++ b/frontend/templates/loggedInBase.html
@@ -23,7 +23,11 @@
         </div>
     </div>
 
-
+    <form action="/logout">
+        <div class="logout">
+            <input type="submit" value="Wyloguj" />
+        </div>
+    </form>
 
 </div>
 {% endblock %}
