--- a/frontend/templates/loginPage.html
+++ b/frontend/templates/loginPage.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="button">
-            <input type="submit" value="Zaloguj" disabled>
+            <input type="submit" value="Zaloguj">
         </div>
 
         {% if wrongPassword == True %}
