--- a/frontend/templates/tworzUzytkownika.html
+++ b/frontend/templates/tworzUzytkownika.html
@@ -68,7 +68,7 @@
 <div class="extend">
     <div class="inner">
         Stwórz
-    <input type="number" value="1">
+    <input type="number" value="1" min="1" max="500" onkeyup="if(parseInt(this.value)>500 || parseInt(this.value)<0){ this.value =0; return false; }">
     nowych pól
     </div>
     <div class="buttonJS" onclick="generateNewForms()">
