--- a/frontend/static/stylesheets/main.css
+++ b/frontend/static/stylesheets/main.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column-reverse;
 
-    width: 30%;
+    max-width: 30%;
     position: absolute;
     top: 10%;
     right: 10%;
