--- a/frontend/templates/tworzUzytkownika.html
+++ b/frontend/templates/tworzUzytkownika.html
@@ -21,6 +21,7 @@
 
 <form class="forms" action="#" method="post">
     <input class="hidden" name="hidden" id="hidden" type="number" value="0">
+    <input class="hidden" name="operacja" id="operacja" type="text" value="osoby">
     <div>
         Imię
     </div>
@@ -59,10 +60,10 @@
     <div class="hidden" id="spacer"></div>
 
     <div class="buttons">
-        <div class="button">
+        <div class="button" onmouseover="setBackToUsers()">
             <input type="submit" value="Stwórz użytkowników">
         </div>
-        <div class="button" style="display:grid; grid-template-columns: auto auto; justify-content: center; grid-column-gap: 10px">
+        <div class="button" style="display:grid; grid-template-columns: auto auto; justify-content: center; grid-column-gap: 10px" onmouseover="generateNewClass()">
             <select id="group_name" name="group_name">
                 {% for groupName in groupNames %}
                     <option value="{{ groupName }}">{{ groupName }}</option>
@@ -124,4 +125,16 @@
         document.getElementById("hidden").setAttribute("value", (parseInt(amount) + parseInt(ostatni_indeks)));
     }
 </script>
+<script>
+    function generateNewClass() {
+        document.getElementById("operacja").setAttribute("value", "klasa");
+    }
+    function setBackToUsers(){
+        document.getElementById("operacja").setAttribute("value", "osoby");
+    }
+</script>
+
+
+
+
 {% endblock %}
